Se crearon animaciones para ojos de pandas y panda 1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panda Shooter</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -13,6 +13,7 @@
 <body>
     <div class="phone">
         <div class="layer-1">
+            <input type="checkbox">
             <div class="left-ear-outer"></div>
             <!-- <div class="left-ear-inter"></div> -->
             <div class="rigth-ear-outer"></div>
@@ -20,13 +21,44 @@
             <div class="head">
                 <div class="head_eye head_eye-left"></div>
                 <div class="head_eye head_eye-right"></div>
+                <div class="head_nose"></div>
             </div>
         </div>
-        <div class="layer-2"></div>
+        <div class="layer-2">
+            <div class="left-ear-outer"></div>
+            <!-- <div class="left-ear-inter"></div> -->
+            <div class="rigth-ear-outer"></div>
+            <!-- <div class="right-ear-inter"></div> -->
+            <div class="head">
+                <div class="head_eye head_eye-left"></div>
+                <div class="head_eye head_eye-right"></div>
+                <div class="head_nose"></div>
+            </div>
+        </div>
         <div class="layer-3"></div>
-        <div class="layer-4"></div>
+        <div class="layer-4">
+            <div class="left-ear-outer"></div>
+            <!-- <div class="left-ear-inter"></div> -->
+            <div class="rigth-ear-outer"></div>
+            <!-- <div class="right-ear-inter"></div> -->
+            <div class="head">
+                <div class="head_eye head_eye-left"></div>
+                <div class="head_eye head_eye-right"></div>
+                <div class="head_nose"></div>
+            </div>
+        </div>
         <div class="layer-5"></div>
-        <div class="layer-6"></div>
+        <div class="layer-6">
+            <div class="left-ear-outer"></div>
+            <!-- <div class="left-ear-inter"></div> -->
+            <div class="rigth-ear-outer"></div>
+            <!-- <div class="right-ear-inter"></div> -->
+            <div class="head">
+                <div class="head_eye head_eye-left"></div>
+                <div class="head_eye head_eye-right"></div>
+                <div class="head_nose"></div>
+            </div>
+        </div>
         <div class="layer-7"></div>
         <div class="layer-8"></div>
         <div class="layer-9"></div>
