Se termina de maquetar el juego, pendiente el aumento del Score

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 
 <body>
     <div class="phone">
+        <div class="score">
+            <h1>PANDA SHOOTER</h1>
+            <p>Puntaje:</P>
+        </div>
+
+
         <div class="layer-1">
             <input type="checkbox">
             <div class="left-ear-outer"></div>
-            <!-- <div class="left-ear-inter"></div> -->
             <div class="rigth-ear-outer"></div>
-            <!-- <div class="right-ear-inter"></div> -->
             <div class="head">
                 <div class="head_eye head_eye-left"></div>
                 <div class="head_eye head_eye-right"></div>
@@ -25,6 +29,7 @@
             </div>
         </div>
         <div class="layer-2">
+            <input type="checkbox">
             <div class="left-ear-outer"></div>
             <!-- <div class="left-ear-inter"></div> -->
             <div class="rigth-ear-outer"></div>
@@ -37,6 +42,7 @@
         </div>
         <div class="layer-3"></div>
         <div class="layer-4">
+            <input type="checkbox">
             <div class="left-ear-outer"></div>
             <!-- <div class="left-ear-inter"></div> -->
             <div class="rigth-ear-outer"></div>
@@ -49,6 +55,7 @@
         </div>
         <div class="layer-5"></div>
         <div class="layer-6">
+            <input type="checkbox">
             <div class="left-ear-outer"></div>
             <!-- <div class="left-ear-inter"></div> -->
             <div class="rigth-ear-outer"></div>
